fix: change register page alignment

--- a/client/src/PageStyle/Loginpage.css
+++ b/client/src/PageStyle/Loginpage.css
@@ -18,8 +18,8 @@
   /* text-align: center; */
   background: #D3D3D3;
   border-radius: 10px;
-  width: 40%;
-  height: 45%;
+  width: 30%;
+  height: 48%;
   align-items: center;
   margin-top: 12px;
 }
