--- a/client/src/PageStyle/RegisterPage.css
+++ b/client/src/PageStyle/RegisterPage.css
@@ -1,43 +1,46 @@
-
-.register-block{
-    
-    font-size:medium;
-    float:left;
+.register-block {
+    font-size: medium;
+    float: left;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 20px;
-    height: 150vh;
+    height: 100vh;
     display: flex;
     background-image: url('../images/login-page-bg.jpg');
-    width:100%;
-    padding : 30px 0;
-   
-}
-.register-block h1{
-    font-family: sans-serif;
-    font-size: 250%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width: 100%;
+    padding: 30px ;
 
 }
-.r-container{
-    /* display: contents; */
-    top: 20px;
-    background:rgba(248, 247, 247, 0.349);
-    border-radius: 10px; 
-    width: 30%; 
-    height: 45%;
+
+.register-block h1 {
+    font-family: sans-serif;
+    font-size: 250%;
+}
+
+.r-container {
+    top: 30px;
+    background: rgba(248, 247, 247, 0.349);
+    border-radius: 10px;
+    width: 30%;
+    height: 80px;
     margin: auto;
 }
 
-.register-sec{
-    padding: 20px 30px; 
-    position:relative;
+.register-sec {
+    padding: 10px 35px;
+    position: relative;
+    height: 10%;
+    /* background: rgba(248, 247, 247, 0.737);
+    border-radius: 10px; */
 }
 
-.register-sec h2{
-    margin-bottom:15px; 
-    font-weight:800; 
-    font-size:30px; 
+.register-sec h2 {
+    margin-bottom: 15px;
+    font-weight: 800;
+    font-size: 30px;
     color: #0069c0;
 }
 
@@ -52,9 +55,9 @@
     margin-right:auto
 } */
 
-.btn-login{
-    background: #0069c0; 
-    color:#fff; 
-    font-weight:600;margin-top: 20px;
-    
+.btn-login {
+    background: #0069c0;
+    color: #fff;
+    font-weight: 600;
+    margin-top: 20px;
 }
